[package]
name = "tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
titlecase = "1.0"
voyager = "0.1"
anyhow = "1.0"
futures = "0.3"
rod = "0.2.3"
finalfusion = "0.16"
ndarray = "0.15.4"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.uuid]
version = "1.1.2"
features = ["v5", "fast-rng"]

[dependencies.faiss]
version = "0.6.0"
features = ["gpu"]
