[package]
name = "tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
titlecase = "1.0"
voyager = "0.1"
anyhow = "1.0"
futures = "0.3"
finalfusion = "0.16"
sled = "0.34.7"
project-root = "0.2.2"

[dependencies.ndarray]
version = "0.15.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.hora]
git = "https://github.com/rangsikitpho/hora.git"

[dependencies.lingua]
version = "1.4.0"
default-features = false
features = ["english", "spanish"]

[dependencies.uuid]
version = "1.1.2"
features = ["v5", "fast-rng"]
